--- a/ruby/blog/app/views/comments_mailer/submitted.html.erb
+++ b/ruby/blog/app/views/comments_mailer/submitted.html.erb
@@ -1,5 +1,4 @@
-<h1>Comments#submitted</h1>
+<%# <h1>Comments#submitted</h1> %>
+<h1>You got a new comments on <%= @comment.post.title %></h1>
+<%= render @comment%>
 
-<p>
-  <%= @greeting %>, find me in app/views/comments_mailer/submitted.html.erb
-</p>
